@@ -134,6 +134,65 @@ ViewFileFun <- function(FileNameWidget){
     }
 
 
+EditFileFun <- function(FileNameWidget=.rqda$.fnames_rqda){
+  ## FileNameWidget=.rqda$.fnames_rqda in Files Tab
+  ## FileNameWidget=.rqda$.FileofCat in F-CAT Tab
+  if (is_projOpen(env = .rqda, conName = "qdacon")) {
+    SelectedFileName <- svalue(FileNameWidget)
+    if (length(svalue(FileNameWidget)) == 0) {
+      gmessage("Select a file first.", icon = "error", con = TRUE)
+    }
+    else {
+      tryCatch(dispose(.rqda$.root_edit),error=function(e) {})
+      assign(".root_edit",gwindow(title=SelectedFileName,parent=c(395,10),width=600,height=600),env=.rqda)
+      assign(".root_edit2",gpanedgroup(horizontal = FALSE, con=.rqda$.root_edit),env=.rqda)
+      gbutton("Save File",con=.rqda$.root_edit2,handler=function(h,...){
+        content <-  svalue(.rqda$.openfile_gui)
+        RQDAQuery(sprintf("update source set file='%s', dateM='%s' where name='%s'",
+                          content,date(),svalue(.rqda$.root_edit))) ## update source table
+        if (nrow(mark_index)!=0){ ## only manipulate the coding when there is one.
+          idx <- apply(mark_index, 1, FUN = function(x) {
+            m1 <- buffer$GetMark(sprintf("%s.1", x[3]))
+            iter1 <- buffer$GetIterAtMark(m1)
+            idx1 <- gtkTextIterGetOffset(iter1$iter)
+            m2 <- buffer$GetMark(sprintf("%s.2", x[3]))
+            iter2 <- buffer$GetIterAtMark(m2)
+            idx2 <- gtkTextIterGetOffset(iter2$iter)
+            ans <- c(selfirst = idx1, selend = idx2,x[3])## matrix of 3x N (N=nrow(mark_index))
+          }) ## end of apply
+          apply(idx,2,FUN=function(x){
+            if (x[1]==x[2])  RQDAQuery(sprintf("update coding set status=0 where rowid=%i",x[3])) else {
+              Encoding(content) <- "UTF-8"
+              RQDAQuery(sprintf("update coding set seltext='%s',selfirst=%i, selend=%i where rowid=%i",
+                                substr(content,x[1],x[2]),x[1],x[2],x[3]))
+            }
+        })## update the coding table (seltext,selfirst, selend), on the rowid (use rowid to name the marks)
+      }})## end of save memo button
+      assign(".openfile_gui", gtext(container = .rqda$.root_edit2, font.attr = c(sizes = "large")), env = .rqda)
+      Encoding(SelectedFileName) <- "unknown"
+      IDandContent <- dbGetQuery(.rqda$qdacon, sprintf("select id, file from source where name='%s'",SelectedFileName))
+      content <- IDandContent$file
+      Encoding(content) <- "UTF-8"
+      W <- get(".openfile_gui", .rqda)
+      add(W, content, font.attr = c(sizes = "large"))
+      buffer <- slot(W, "widget")@widget$GetBuffer() ## get text buffer.
+      mark_index <- dbGetQuery(.rqda$qdacon,sprintf("select selfirst,selend,rowid from coding where fid=%i and status=1",
+                                                    IDandContent$id))
+      if (nrow(mark_index)!=0){## make sense only when there is coding there
+        ClearMark(W ,0 , max(mark_index$selend))
+        HL(W,index=mark_index[,c("selfirst","selend")])
+        ## insert marks according to mark_index (use rowid to name the marks)
+        apply(mark_index,1,function(x){
+          iter <- gtkTextBufferGetIterAtOffset(buffer, x[1]) ## index to iter
+          mark <- buffer$CreateMark(sprintf("%s.1",x[3]),where=iter$iter)         ## insert marks
+          gtkTextMarkSetVisible(mark,TRUE)                   ## set itvisible
+          iter <- gtkTextBufferGetIterAtOffset(buffer, x[2]) ## index to iter
+          mark <- buffer$CreateMark(sprintf("%s.2",x[3]),where=iter$iter)         ## insert marks
+          gtkTextMarkSetVisible(mark,TRUE)                   ## set itvisible
+        }) ## end of apply
+    }}}}
+
+
 write.FileList <- function(FileList,encoding=.rqda$encoding,con=.rqda$qdacon,...){
   ## import a list of files into the source table
   ## FileList is a list of file content, with names(FileList) the name of the files.
